# rez-ffmpeg

./: CMakeLists.txt  package.py  set_env.in
cmake/: ffmpeg.cmake
dependencies/: CMakeLists.txt  configure_wrapper.in  post_install.py
